# rs-chromplotter

./: .gitignore  Cargo.toml  README.md
src/: main.rs  plotting.rs  utils.rs
src/plotting/: plots.rs  plotters.rs
src/utils/: bedmethyl.rs  prepare_data.rs  preprocess.rs
test_data/: as_timings_test.csv  bedmethyl_test.bed.tsv
