[package]
name = "chromplotter"
version = "0.1.0"
edition = "2021"

[dependencies]
# charming = {version = "0.4.1", features = ["ssr"]}
charming = {git = "https://github.com/yuankunzhang/charming.git", branch = "main", features = ["ssr"]}
clap = { version = "4.5.23", features = ["derive"] }
polars = {version = "0.45.1", features = ["lazy"] }
